# Ava

./: CMakeLists.txt  Makefile  README.md  answer.c  answer.h  ava  ava.1  ava.c  ava.h  config.def.h  config.h  config.h.in  config.mk  main.c  test.html  utils.c  utils.h
include/: getting_html.h  global.h  htmlparsing.h  save_to_file.h
src/: ava.c  ava.h  cli.c  cli.h  getting_html.c  getting_html.h  global.c  htmlparsing.c  htmlparsing.h  http.c  http.h  main.c  parsing.c  parsing.h  save_to_file.c  utils.c  utils.h
test/: offline_doc.c  offline_doc.h
